[tool.poetry]
name = "sicredi-test"
version = "0.1.0"
description = ""
authors = ["RicardoTurco <ricturco@gmail.com>"]
readme = "README.md"
packages = [{include = "sicredi_test"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
